# wasm-tools

crates/wasmparser/: Cargo.toml
crates/wasmparser/src/: binary_reader.rs  lib.rs  parser.rs  resources.rs  validator.rs
crates/wasmparser/src/readers/component/: canonicals.rs  instances.rs  types.rs
crates/wasmparser/src/readers/core/: coredumps.rs  dylink0.rs  elements.rs  types.rs
crates/wasmparser/src/validator/: component.rs  core.rs  names.rs  operators.rs  types.rs
