[package]
name = "wasmparser"
version = "0.112.0"
authors = ["Yury Delendik <ydelendik@mozilla.com>"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
homepage = "https://github.com/bytecodealliance/wasm-tools/tree/main/crates/wasmparser"
keywords = ["parser", "WebAssembly", "wasm"]
description = """
A simple event-driven library for parsing WebAssembly binary files.
"""
edition.workspace = true
exclude = ["benches/*.wasm"]

[dependencies]
ahash = { version = "0.8", default-features = false, features = ['compile-time-rng']}
indexmap = { version = "2.0", default-features = false }
semver = { version = "1.0", default-features = false }

[dependencies.hashbrown]
version = '0.14'
default-features = false
features = ['ahash', 'inline-more']

[features]
default = ["std"]
std = ["indexmap/std", "semver/std"]

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
wat = { path = "../wat" }
wast = { path = "../wast" }
rayon = { workspace = true }
once_cell = "1.13.0"
wasm-encoder = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
